# Hackaron_Team_Plov_Track_2

./: pyproject.toml
Hackaton_SBER/: .gitignore  Dockerfile  docker-compose.yml  manage.py
Hackaton_SBER/Hackaton_SBER/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
Hackaton_SBER/STORAGE/: admin.py  apps.py  model_choices.py  model_validators.py  models.py  serializers.py  urls.py  views.py
